- MailSlave::setMailerAttachments() now uses realpath() to prevent directory traversal attacks.
- Type enums have been relocated to a new namespace.
- Skeleton has been updated to account for recent changes.
- Template component now allows for nested setters.
- DataType enum now supports 55 data types.
- Router factories specific to each middleware.

#### Fixed
- Logs are not being stored inside storage directory.
- AuthWorker::autologin() produces a timing attack vulnerability.

#### Removed
- sitePath parameter from Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() 
- getDataItem() method from Request component is getting deprecated.
- getOriginInfo() method from Request component.
- Permissions-Policy meta tag from main.php template.
- initializeServer() method from Server class.
- preload(...) method from Server class.
- isApi() method from Request component.
- new(...) method from Router component.
- configureSecurity(...) method from Config class.

---

### [v0.3] - 2025-12-17
#### Added
- Config::configurePrivacy(...) for defining whether to register logs or restrict what data to register.
- Collection and Item components for handling key-value pair arrays.
- ValidationWorker for validating data such as email addresses or passwords.
- ValidationFlags collection for handling validation flags.
- API Response success boolean field.
- AlreadyAuthorizedException for handling unauthorized exclusive endpoints.
- Endpoint argument unauthorizedExclusive for handling unauthorized exclusive endpoints.
- LogWorker::debug() for debugging system logs.
- MailWorker for sending crafted and dynamic emails.
- Mail component for crafting mail objects.
- Item::mail and Item::file for helping with Mail crafting.
- AUTH_DOMAIN env variable for defining global authorization domain.
- Config::configureSecurity(...) for defining security policies against DDoS attacks and input length. 
- DataWorker warnings against SQL injection.  
